--- a/Aeon/include_head.html
+++ b/Aeon/include_head.html
@@ -11,8 +11,12 @@
 <link rel="stylesheet" type="text/css" href="css/cookieconsent.min.css" />
 
 <!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
+<script src="https://cdn.jsdelivr.net/combine/npm/prismjs@1.26.0,npm/prismjs@1.26.0/plugins/line-numbers/prism-line-numbers.min.js,npm/prismjs@1.26.0/plugins/normalize-whitespace/prism-normalize-whitespace.min.js,npm/prismjs@1.26.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js,npm/prismjs@1.26.0/plugins/autoloader/prism-autoloader.min.js,npm/prismjs@1.26.0/plugins/remove-initial-line-feed/prism-remove-initial-line-feed.min.js,npm/prismjs@1.26.0/plugins/autolinker/prism-autolinker.min.js,npm/prismjs@1.26.0/plugins/toolbar/prism-toolbar.min.js,npm/git-js@1.1.1">
+This script tag will trigger ACR issues
+</script>
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
