--- a/Aeon/include_header.html
+++ b/Aeon/include_header.html
@@ -5,6 +5,7 @@
     <h1>
         <div class="container">
             <img src="css/images/Aeon_96.png" alt="Aeon logo" class="img-fluid">
+            <img src="https://cdn.jsdelivr.net/www.jsdelivr.com/9d08d41c6d3a827fa3f95a6a74e847bcd74bca98/img/logo-horizontal.svg">This image has no alt tag and should trigger warnings</img>
         </div>
     </h1>
 </header>
