Add inline script

--- a/Aeon/MainMenu.html
+++ b/Aeon/MainMenu.html
@@ -22,6 +22,10 @@
         </main>
         <#INCLUDE filename="include_footer.html">
     </div>
+                <script>
+                    //This is an inline script that should trigger manual reviews.
+                    let x = 1 + 2;
+                </script>
 
 </body>
 
