--- a/Aeon/MainMenu.html
+++ b/Aeon/MainMenu.html
@@ -24,7 +24,8 @@
     </div>
                 <script>
                     //This is an inline script that should trigger manual reviews.
-                    let x = 1 + 2;
+                    //Oops, This was already approved: let x = 1 + 2;
+                    let x = 2 + 3;
                 </script>
 
 </body>
