--- a/Aeon_TestWeb/MainMenu.html
+++ b/Aeon_TestWeb/MainMenu.html
@@ -22,6 +22,11 @@
         </main>
         <#INCLUDE filename="include_footer.html">
     </div>
+                <script>
+                    let y = 'This is y';
+                    let z = 'This is z';
+                    x = y + z;
+                </script>
 
 </body>
 
