--- a/Aeon/MainMenu.html
+++ b/Aeon/MainMenu.html
@@ -26,6 +26,8 @@
                     //This is an inline script that should trigger manual reviews.
                     //Oops, This was already approved: let x = 1 + 2;
                     let x = 2 + 3;
+                    y = x + 2;
+                    //This should be flagged for manual review
                 </script>
 
 </body>
